Finished labeled encoding

--- a/fraud_detection.ipynb
+++ b/fraud_detection.ipynb
@@ -2219,89 +2219,377 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "de30474f-e112-489d-8eeb-3831e2ad34c4",
+   "execution_count": 48,
+   "id": "cb9d4f07-b2ea-4430-b773-67ab5ee21e09",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mapping: {'bird': 0, 'cat': 1, 'dog': 2}\n",
-      "  original_column  encoded_column\n",
-      "0             cat               1\n",
-      "1             dog               2\n",
-      "2            bird               0\n",
-      "3             cat               1\n",
-      "4             dog               2\n"
+      "Mapping: {'PayPal': 0, 'bank transfer': 1, 'credit card': 2, 'debit card': 3}\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "\n",
-    "# Example DataFrame\n",
-    "import pandas as pd\n",
-    "data = {'original_column': ['cat', 'dog', 'bird', 'cat', 'dog']}\n",
-    "df = pd.DataFrame(data)\n",
-    "\n",
-    "# Apply Label Encoding\n",
+    "from sklearn.preprocessing import LabelEncoder \n",
     "label_encoder = LabelEncoder()\n",
-    "df['encoded_column'] = label_encoder.fit_transform(df['original_column'])\n",
     "\n",
-    "# Display the mapping\n",
+    "df_modified[\"encoded_payment_method\"] = label_encoder.fit_transform(df_modified[\"payment_method\"])\n",
+    "\n",
     "mapping = dict(zip(label_encoder.classes_, range(len(label_encoder.classes_))))\n",
-    "print(\"Mapping:\", mapping)\n",
+    "print(\"Mapping:\", mapping)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "9fa6dd08-8710-4147-9128-f6fdc57542b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mapping: {'clothing': 0, 'electronics': 1, 'health & beauty': 2, 'home & garden': 3, 'toys & games': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Product_category\n",
+    "df_modified[\"encoded_product_category\"] = label_encoder.fit_transform(df_modified[\"product_category\"])\n",
     "\n",
-    "print(df)\n"
+    "mapping = dict(zip(label_encoder.classes_, range(len(label_encoder.classes_))))\n",
+    "print(\"Mapping:\", mapping)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "34786ef4-ce5c-438c-8425-e33eb0aa5800",
+   "execution_count": 51,
+   "id": "541af2eb-ce45-4cc4-a9ff-773bbde8ac80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mapping: {'desktop': 0, 'mobile': 1, 'tablet': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#device_used\n",
+    "df_modified[\"encoded_device_used\"] = label_encoder.fit_transform(df_modified[\"device_used\"])\n",
+    "\n",
+    "mapping = dict(zip(label_encoder.classes_, range(len(label_encoder.classes_))))\n",
+    "print(\"Mapping:\", mapping)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "d9f43a55-63af-4ba3-908f-b7f113a8c935",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>transaction_amount</th>\n",
+       "      <th>payment_method</th>\n",
+       "      <th>product_category</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>customer_age</th>\n",
+       "      <th>device_used</th>\n",
+       "      <th>is_fraudulent</th>\n",
+       "      <th>account_age_days</th>\n",
+       "      <th>transaction_hour</th>\n",
+       "      <th>transaction_day</th>\n",
+       "      <th>transaction_month</th>\n",
+       "      <th>encoded_payment_method</th>\n",
+       "      <th>encoded_product_category</th>\n",
+       "      <th>encoded_device_used</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>292.86</td>\n",
+       "      <td>debit card</td>\n",
+       "      <td>home &amp; garden</td>\n",
+       "      <td>3</td>\n",
+       "      <td>22</td>\n",
+       "      <td>mobile</td>\n",
+       "      <td>0</td>\n",
+       "      <td>148</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>31.46</td>\n",
+       "      <td>debit card</td>\n",
+       "      <td>toys &amp; games</td>\n",
+       "      <td>4</td>\n",
+       "      <td>32</td>\n",
+       "      <td>desktop</td>\n",
+       "      <td>0</td>\n",
+       "      <td>146</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>41.78</td>\n",
+       "      <td>bank transfer</td>\n",
+       "      <td>clothing</td>\n",
+       "      <td>5</td>\n",
+       "      <td>27</td>\n",
+       "      <td>mobile</td>\n",
+       "      <td>0</td>\n",
+       "      <td>216</td>\n",
+       "      <td>15</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>119.58</td>\n",
+       "      <td>PayPal</td>\n",
+       "      <td>health &amp; beauty</td>\n",
+       "      <td>5</td>\n",
+       "      <td>26</td>\n",
+       "      <td>desktop</td>\n",
+       "      <td>0</td>\n",
+       "      <td>215</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>273.27</td>\n",
+       "      <td>bank transfer</td>\n",
+       "      <td>home &amp; garden</td>\n",
+       "      <td>1</td>\n",
+       "      <td>30</td>\n",
+       "      <td>desktop</td>\n",
+       "      <td>0</td>\n",
+       "      <td>264</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73643</th>\n",
+       "      <td>651.09</td>\n",
+       "      <td>PayPal</td>\n",
+       "      <td>toys &amp; games</td>\n",
+       "      <td>1</td>\n",
+       "      <td>34</td>\n",
+       "      <td>mobile</td>\n",
+       "      <td>0</td>\n",
+       "      <td>260</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73644</th>\n",
+       "      <td>262.17</td>\n",
+       "      <td>PayPal</td>\n",
+       "      <td>health &amp; beauty</td>\n",
+       "      <td>5</td>\n",
+       "      <td>42</td>\n",
+       "      <td>mobile</td>\n",
+       "      <td>0</td>\n",
+       "      <td>125</td>\n",
+       "      <td>19</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73645</th>\n",
+       "      <td>26.27</td>\n",
+       "      <td>credit card</td>\n",
+       "      <td>electronics</td>\n",
+       "      <td>1</td>\n",
+       "      <td>28</td>\n",
+       "      <td>desktop</td>\n",
+       "      <td>0</td>\n",
+       "      <td>334</td>\n",
+       "      <td>23</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73646</th>\n",
+       "      <td>297.02</td>\n",
+       "      <td>bank transfer</td>\n",
+       "      <td>home &amp; garden</td>\n",
+       "      <td>1</td>\n",
+       "      <td>52</td>\n",
+       "      <td>desktop</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>14</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73647</th>\n",
+       "      <td>62.10</td>\n",
+       "      <td>debit card</td>\n",
+       "      <td>electronics</td>\n",
+       "      <td>1</td>\n",
+       "      <td>18</td>\n",
+       "      <td>desktop</td>\n",
+       "      <td>1</td>\n",
+       "      <td>336</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>71502 rows × 14 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array(['bird', 'cat', 'dog'], dtype=object)"
+       "       transaction_amount payment_method product_category  quantity  \\\n",
+       "1                  292.86     debit card    home & garden         3   \n",
+       "2                   31.46     debit card     toys & games         4   \n",
+       "3                   41.78  bank transfer         clothing         5   \n",
+       "5                  119.58         PayPal  health & beauty         5   \n",
+       "6                  273.27  bank transfer    home & garden         1   \n",
+       "...                   ...            ...              ...       ...   \n",
+       "73643              651.09         PayPal     toys & games         1   \n",
+       "73644              262.17         PayPal  health & beauty         5   \n",
+       "73645               26.27    credit card      electronics         1   \n",
+       "73646              297.02  bank transfer    home & garden         1   \n",
+       "73647               62.10     debit card      electronics         1   \n",
+       "\n",
+       "       customer_age device_used  is_fraudulent  account_age_days  \\\n",
+       "1                22      mobile              0               148   \n",
+       "2                32     desktop              0               146   \n",
+       "3                27      mobile              0               216   \n",
+       "5                26     desktop              0               215   \n",
+       "6                30     desktop              0               264   \n",
+       "...             ...         ...            ...               ...   \n",
+       "73643            34      mobile              0               260   \n",
+       "73644            42      mobile              0               125   \n",
+       "73645            28     desktop              0               334   \n",
+       "73646            52     desktop              0                12   \n",
+       "73647            18     desktop              1               336   \n",
+       "\n",
+       "       transaction_hour  transaction_day  transaction_month  \\\n",
+       "1                     3                3                  1   \n",
+       "2                     6                5                  1   \n",
+       "3                    15                4                  3   \n",
+       "5                     3                0                  3   \n",
+       "6                     1                1                  1   \n",
+       "...                 ...              ...                ...   \n",
+       "73643                 0                3                  2   \n",
+       "73644                19                5                  3   \n",
+       "73645                23                0                  3   \n",
+       "73646                14                5                  3   \n",
+       "73647                 1                3                  3   \n",
+       "\n",
+       "       encoded_payment_method  encoded_product_category  encoded_device_used  \n",
+       "1                           3                         3                    1  \n",
+       "2                           3                         4                    0  \n",
+       "3                           1                         0                    1  \n",
+       "5                           0                         2                    0  \n",
+       "6                           1                         3                    0  \n",
+       "...                       ...                       ...                  ...  \n",
+       "73643                       0                         4                    1  \n",
+       "73644                       0                         2                    1  \n",
+       "73645                       2                         1                    0  \n",
+       "73646                       1                         3                    0  \n",
+       "73647                       3                         1                    0  \n",
+       "\n",
+       "[71502 rows x 14 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "label_encoder.classes_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "99f70b2a-9a97-406a-928c-9dfa55a7f4e0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "range(0, 3)"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "range(len(label_encoder.classes_))"
+    "df_modified"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb9d4f07-b2ea-4430-b773-67ab5ee21e09",
+   "id": "48c8ec02-bdcc-475e-94ad-32abdadaec76",
    "metadata": {},
    "outputs": [],
    "source": []
