--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2287,7 +2287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "id": "d9f43a55-63af-4ba3-908f-b7f113a8c935",
    "metadata": {},
    "outputs": [
@@ -2313,11 +2313,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>transaction_amount</th>\n",
-       "      <th>payment_method</th>\n",
-       "      <th>product_category</th>\n",
        "      <th>quantity</th>\n",
        "      <th>customer_age</th>\n",
-       "      <th>device_used</th>\n",
        "      <th>is_fraudulent</th>\n",
        "      <th>account_age_days</th>\n",
        "      <th>transaction_hour</th>\n",
@@ -2332,11 +2329,8 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>292.86</td>\n",
-       "      <td>debit card</td>\n",
-       "      <td>home &amp; garden</td>\n",
        "      <td>3</td>\n",
        "      <td>22</td>\n",
-       "      <td>mobile</td>\n",
        "      <td>0</td>\n",
        "      <td>148</td>\n",
        "      <td>3</td>\n",
@@ -2349,11 +2343,8 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>31.46</td>\n",
-       "      <td>debit card</td>\n",
-       "      <td>toys &amp; games</td>\n",
        "      <td>4</td>\n",
        "      <td>32</td>\n",
-       "      <td>desktop</td>\n",
        "      <td>0</td>\n",
        "      <td>146</td>\n",
        "      <td>6</td>\n",
@@ -2366,11 +2357,8 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>41.78</td>\n",
-       "      <td>bank transfer</td>\n",
-       "      <td>clothing</td>\n",
        "      <td>5</td>\n",
        "      <td>27</td>\n",
-       "      <td>mobile</td>\n",
        "      <td>0</td>\n",
        "      <td>216</td>\n",
        "      <td>15</td>\n",
@@ -2383,11 +2371,8 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>119.58</td>\n",
-       "      <td>PayPal</td>\n",
-       "      <td>health &amp; beauty</td>\n",
        "      <td>5</td>\n",
        "      <td>26</td>\n",
-       "      <td>desktop</td>\n",
        "      <td>0</td>\n",
        "      <td>215</td>\n",
        "      <td>3</td>\n",
@@ -2400,11 +2385,8 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>273.27</td>\n",
-       "      <td>bank transfer</td>\n",
-       "      <td>home &amp; garden</td>\n",
        "      <td>1</td>\n",
        "      <td>30</td>\n",
-       "      <td>desktop</td>\n",
        "      <td>0</td>\n",
        "      <td>264</td>\n",
        "      <td>1</td>\n",
@@ -2427,18 +2409,12 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>73643</th>\n",
        "      <td>651.09</td>\n",
-       "      <td>PayPal</td>\n",
-       "      <td>toys &amp; games</td>\n",
        "      <td>1</td>\n",
        "      <td>34</td>\n",
-       "      <td>mobile</td>\n",
        "      <td>0</td>\n",
        "      <td>260</td>\n",
        "      <td>0</td>\n",
@@ -2451,11 +2427,8 @@
        "    <tr>\n",
        "      <th>73644</th>\n",
        "      <td>262.17</td>\n",
-       "      <td>PayPal</td>\n",
-       "      <td>health &amp; beauty</td>\n",
        "      <td>5</td>\n",
        "      <td>42</td>\n",
-       "      <td>mobile</td>\n",
        "      <td>0</td>\n",
        "      <td>125</td>\n",
        "      <td>19</td>\n",
@@ -2468,11 +2441,8 @@
        "    <tr>\n",
        "      <th>73645</th>\n",
        "      <td>26.27</td>\n",
-       "      <td>credit card</td>\n",
-       "      <td>electronics</td>\n",
        "      <td>1</td>\n",
        "      <td>28</td>\n",
-       "      <td>desktop</td>\n",
        "      <td>0</td>\n",
        "      <td>334</td>\n",
        "      <td>23</td>\n",
@@ -2485,11 +2455,8 @@
        "    <tr>\n",
        "      <th>73646</th>\n",
        "      <td>297.02</td>\n",
-       "      <td>bank transfer</td>\n",
-       "      <td>home &amp; garden</td>\n",
        "      <td>1</td>\n",
        "      <td>52</td>\n",
-       "      <td>desktop</td>\n",
        "      <td>0</td>\n",
        "      <td>12</td>\n",
        "      <td>14</td>\n",
@@ -2502,11 +2469,8 @@
        "    <tr>\n",
        "      <th>73647</th>\n",
        "      <td>62.10</td>\n",
-       "      <td>debit card</td>\n",
-       "      <td>electronics</td>\n",
        "      <td>1</td>\n",
        "      <td>18</td>\n",
-       "      <td>desktop</td>\n",
        "      <td>1</td>\n",
        "      <td>336</td>\n",
        "      <td>1</td>\n",
@@ -2518,48 +2482,35 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>71502 rows × 14 columns</p>\n",
+       "<p>71502 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       transaction_amount payment_method product_category  quantity  \\\n",
-       "1                  292.86     debit card    home & garden         3   \n",
-       "2                   31.46     debit card     toys & games         4   \n",
-       "3                   41.78  bank transfer         clothing         5   \n",
-       "5                  119.58         PayPal  health & beauty         5   \n",
-       "6                  273.27  bank transfer    home & garden         1   \n",
-       "...                   ...            ...              ...       ...   \n",
-       "73643              651.09         PayPal     toys & games         1   \n",
-       "73644              262.17         PayPal  health & beauty         5   \n",
-       "73645               26.27    credit card      electronics         1   \n",
-       "73646              297.02  bank transfer    home & garden         1   \n",
-       "73647               62.10     debit card      electronics         1   \n",
+       "       transaction_amount  quantity  customer_age  is_fraudulent  \\\n",
+       "1                  292.86         3            22              0   \n",
+       "2                   31.46         4            32              0   \n",
+       "3                   41.78         5            27              0   \n",
+       "5                  119.58         5            26              0   \n",
+       "6                  273.27         1            30              0   \n",
+       "...                   ...       ...           ...            ...   \n",
+       "73643              651.09         1            34              0   \n",
+       "73644              262.17         5            42              0   \n",
+       "73645               26.27         1            28              0   \n",
+       "73646              297.02         1            52              0   \n",
+       "73647               62.10         1            18              1   \n",
        "\n",
-       "       customer_age device_used  is_fraudulent  account_age_days  \\\n",
-       "1                22      mobile              0               148   \n",
-       "2                32     desktop              0               146   \n",
-       "3                27      mobile              0               216   \n",
-       "5                26     desktop              0               215   \n",
-       "6                30     desktop              0               264   \n",
-       "...             ...         ...            ...               ...   \n",
-       "73643            34      mobile              0               260   \n",
-       "73644            42      mobile              0               125   \n",
-       "73645            28     desktop              0               334   \n",
-       "73646            52     desktop              0                12   \n",
-       "73647            18     desktop              1               336   \n",
-       "\n",
-       "       transaction_hour  transaction_day  transaction_month  \\\n",
-       "1                     3                3                  1   \n",
-       "2                     6                5                  1   \n",
-       "3                    15                4                  3   \n",
-       "5                     3                0                  3   \n",
-       "6                     1                1                  1   \n",
-       "...                 ...              ...                ...   \n",
-       "73643                 0                3                  2   \n",
-       "73644                19                5                  3   \n",
-       "73645                23                0                  3   \n",
-       "73646                14                5                  3   \n",
-       "73647                 1                3                  3   \n",
+       "       account_age_days  transaction_hour  transaction_day  transaction_month  \\\n",
+       "1                   148                 3                3                  1   \n",
+       "2                   146                 6                5                  1   \n",
+       "3                   216                15                4                  3   \n",
+       "5                   215                 3                0                  3   \n",
+       "6                   264                 1                1                  1   \n",
+       "...                 ...               ...              ...                ...   \n",
+       "73643               260                 0                3                  2   \n",
+       "73644               125                19                5                  3   \n",
+       "73645               334                23                0                  3   \n",
+       "73646                12                14                5                  3   \n",
+       "73647               336                 1                3                  3   \n",
        "\n",
        "       encoded_payment_method  encoded_product_category  encoded_device_used  \n",
        "1                           3                         3                    1  \n",
@@ -2574,22 +2525,33 @@
        "73646                       1                         3                    0  \n",
        "73647                       3                         1                    0  \n",
        "\n",
-       "[71502 rows x 14 columns]"
+       "[71502 rows x 11 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df_modified.drop([\"payment_method\", \"product_category\", \"device_used\"], axis = 1, inplace = True)\n",
     "df_modified"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "48c8ec02-bdcc-475e-94ad-32abdadaec76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_modified.to_csv(\"processed_samples.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "921b56f2-5365-4dfb-928c-56fc39601794",
    "metadata": {},
    "outputs": [],
    "source": []
