Created a logistic regression model with accuacy score 95%

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2545,13 +2545,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_modified.to_csv(\"processed_samples.csv\")"
+    "df_modified.to_csv(\"processed_samples.csv\", index = False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "921b56f2-5365-4dfb-928c-56fc39601794",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize = (12,5))\n",
+    "sns.heatmap(df.corr(), cmap='YlGnBu', annot=True, linewidths = 1.5)\n",
+    "plt.title(\"Heat map\", size = 18);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1298786a-829e-478c-a6d6-3c4f480ec887",
+   "metadata": {},
+   "source": [
+    "**This heatmap makes me want to see the relation between fraud and transaction amount**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11dcc93a-3d3b-426c-858d-f9f33a8eba0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize = (10, 7))\n",
+    "\n",
+    "plt.scatter(x = df[\"transaction_amount\"], y = df[\"is_fraudulent\"], color = \"skyblue\")\n",
+    "plt.title(\"The relation between frauds and amount\", size = 18)\n",
+    "plt.xlabel(\"Transaction amount\", size = 15)\n",
+    "plt.ylabel(\"Fraud\", size = 15)\n",
+    "plt.grid(True);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a690d03d-4977-43a3-8171-27209fb1993b",
+   "metadata": {},
+   "source": [
+    "**Nearly any transaction more than 2000 dollars is fraud**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "238468cf-4d6c-41b0-a303-3aac23ce50eb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cd27099-c730-4582-9379-4ca93707b258",
    "metadata": {},
    "outputs": [],
    "source": []
